# lv-loanword-detector

./: .gitignore  Readme.md  extract_entries.py  package_data.sh  pyproject.toml
classifier/: README.md  __init__.py  classification_report_no_length_features.txt  classification_report_with_length_features.txt  classified.csv  classify.py  dev_vecs_1.csv  manual_test_entries.csv  model.py  train.py  word_vectorizer.py
corpora_extraction/: README.md  clean_tokens.py  compute_ngrams.py  parse_corpus.py
data/: README.md
etymological_dict/: README.md  abbreviations.txt  label_data.py  process_entries.py
gui_integration/: README.md  main.py  samples.py  utils.py
integration/: README.md  example.py
manual_collection/: convert_manual.py
model/: train.py
scripts/: current_models.txt  download_models.py  latest_models.txt
shell_scripts/: activate_venv.sh
