[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lv-loanword-detector"
version = "0.2.1"
description = "Latvian loanword classifier"
authors = [
    { name="Jorens Shtekels", email="jorens.stekels@outlook.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    # General dependencies.
    "pandas",
    "tqdm",
    # Entry extraction from the dict.
    "pymupdf",
    # Corpora extraction.
    "lxml",
    # Classifier and Labeling.
    "joblib",
    "scikit-learn",
    # Scripts.
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["classifier", "integration", "scripts"]

[project.scripts]
lv-loanword-classify = "classifier.classify:main"
lv-loanword-example = "integration.example:main"
lv-loanword-download = "scripts.download_models:main"

[project.optional-dependencies]
stanza = ["stanza>=1.10.0"]

[tool.setuptools.package-data]
scripts = ["current_models.txt"]
